--- a/App.css
+++ b/App.css
@@ -27,15 +27,28 @@ body {
 }
 
 .res-card {
-  height: 300px;
-  width: 200px;
+  width: 250px;
+  padding: 5px;
+  flex: 0 1 calc(20% - 1px); /* Adjust the percentage and margin as needed */
+}
+
+.res-card:hover {
   border: 1px solid black;
-  flex: 0 1 calc(20% - 10px); /* Adjust the percentage and margin as needed */
 }
 
 .restaurant-container {
   display: flex;
-  justify-content: center;
+
   flex-wrap: wrap;
   gap: 10px;
+}
+
+.res-logo {
+  width: 100%;
+  height: 190px;
+}
+
+p {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
