--- a/App.css
+++ b/App.css
@@ -68,3 +68,12 @@ p {
 #top-restaurants:hover {
   background-color: #e4d0d0;
 }
+
+.shimmer {
+  background: rgb(224, 224, 224);
+  margin-top: 50px;
+  height: 300px;
+  width: 170px;
+  margin-right: 20px;
+  display: inline-block;
+}
