--- a/App.css
+++ b/App.css
@@ -77,3 +77,22 @@ p {
   margin-right: 20px;
   display: inline-block;
 }
+
+.login {
+  margin-right: 20px;
+  padding: 0 5px;
+}
+
+.search {
+  margin-top: 20px;
+}
+
+.search input {
+  padding: 6px 5px;
+  font-size: 20px;
+}
+
+.search button {
+  padding: 10px 5px;
+  margin-left: 20px;
+}
