--- a/App.css
+++ b/App.css
@@ -1,103 +1,3 @@
-* {
-  font-family: Poppins, sans-serif;
-}
-
-.logo {
-  width: 200px;
-}
-
-body {
-  max-width: 1028px;
-  margin: 5px auto;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid black;
-}
-
-.nav-items > ul {
-  display: flex;
-}
-
-.nav-items ul {
-  list-style: none;
-}
-.nav-items > ul > li {
-  font-size: 24px;
-  padding: 20px;
-}
-
-.res-card {
-  width: 170px;
-  /* padding: 5px; */
-  /* flex: 0 1 calc(20% - 1px); /* Adjust the percentage and margin as needed */
-}
-
-.res-card:hover {
-  border: 1px solid black;
-}
-
-.restaurant-container {
-  display: flex;
-
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.res-logo {
-  width: 100%;
-  height: 190px;
-}
-
-p {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-#top-restaurants {
-  margin: 20px 0;
-  padding: 10px 20px;
-  background-color: #a1a1a1;
-  cursor: pointer;
-  border: none;
-}
-
-#top-restaurants:hover {
-  background-color: #e4d0d0;
-}
-
-.shimmer {
-  background: rgb(224, 224, 224);
-  margin-top: 50px;
-  height: 300px;
-  width: 170px;
-  margin-right: 20px;
-  display: inline-block;
-}
-
-.login {
-  margin-right: 20px;
-  padding: 0 5px;
-}
-
-.search {
-  margin-top: 20px;
-}
-
-.search input {
-  padding: 6px 5px;
-  font-size: 20px;
-}
-
-.search button {
-  padding: 10px 5px;
-  margin-left: 20px;
-}
-
-.user-card {
-  border: 1px solid black;
-  margin-bottom: 20px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
